Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -360,6 +360,7 @@ components:
         resultCode:
           type: string
           format: int32
+          default: "0000"
         resultMessage:
           type: string
         success:
