Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -655,6 +655,9 @@ components:
             state:
                 type: integer
                 format: int1
+                enum:
+                    - 0
+                    - 1
             sku:
                 type: integer
                 format: int64
